feat: add OIDC global user and exam participant management
